--- a/src/Nav.css
+++ b/src/Nav.css
@@ -7,6 +7,9 @@
   justify-content: space-between;
   height: 40px;
   z-index: 1;
+  /*Animations*/
+  transition-timing-function: ease-in;
+  transition: all 0.5s;
 }
 
 .nav__black {
